# vault-injector

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh
k8s/: Chart.yaml  deployment.yaml  values.yaml
k8s/templates/: deployment.yaml
src/: main.rs
src/config/: mod.rs
src/injector/: mod.rs
src/k8s/: mod.rs  restart_manager.rs  selector.rs
src/vault/: mod.rs
