[package]
name = "vault-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
gethostname = "0.4.1"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.94"
serde = "1.0.152"
vaultrs = "0.6.2"
clap = "2.9.3"
semver = "1.0.16"
base64 = "0.21.0"
